--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -50,7 +50,7 @@
           </tab>
           <tab heading="Interests">
             <h4>Interests</h4>
-            <p>{{user.interestes}}</p>
+            <p>{{user.interest}}</p>
           </tab>
           <tab heading="Photos">
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
