Add pagging, sorting and filteriing

--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -33,7 +33,7 @@
           <div>
             <strong>Member since:</strong>
             <p>
-              {{user.created}}
+              {{user.created | date}}
             </p>
           </div>
         </div>
