--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -26,7 +26,7 @@
         <div>
           <strong>Member since:</strong>
           <p>
-            {{user.created}}
+            {{user.created | date}}
           </p>
         </div>
       </div>
