--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -5,7 +5,7 @@
       <li class="list-inline-item">
         <button class="btn btn-primary">
           <i class="fa fa-user" [routerLink]="['/members/',user.id]"></i></button>
-        <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+        <button class="btn btn-primary" (click)="sendLike(user.id)"><i class="fa fa-heart"></i></button>
         <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
       </li>
     </ul>
