--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -27,7 +27,7 @@
           <div>
             <strong>Last Active:</strong>
             <p>
-              {{user.lastActive}}
+              {{user.lastActive | date:'shortTime' }}
             </p>
           </div>
           <div>
@@ -48,21 +48,39 @@
         <tabset class="member-tabset">
           <tab heading="Edit Profile">
             <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
-              <h4>Description</h4>
+              <h4>Overview</h4>
               <textarea name="introduction" rows="6" class="form-control" [(ngModel)]="user.introduction"></textarea>
-              <h4>Looking For</h4>
-              <textarea name="lookingFor" rows="6" class="form-control" [(ngModel)]="user.lookingFor"></textarea>
-              <h4>Interests</h4>
-              <textarea name="interests" rows="6" class="form-control" [(ngModel)]="user.interest"></textarea>
-              <h4>Location Details:</h4>
-              <div class="form-inline">
-                <label for="city">City</label>
-                <input class="form-control" type="text" name="city" [(ngModel)]="user.city">
-                <label for="city">Country</label>
-                <input class="form-control" type="text" name="country" [(ngModel)]="user.country">
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label>Username</label>
+                    <input type="text" class="form-control" name="username" [(ngModel)]="user.username">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password" [(ngModel)]="user.password">
+                  </div>
+                </div>
               </div>
-            </form>
 
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label>Country</label>
+                    <input type="text" class="form-control" name="country" [(ngModel)]="user.country">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label>City</label>
+                    <input type="text" class="form-control" name="city" [(ngModel)]="user.city">
+                  </div>
+                </div>
+              </div>
+              <h4></h4>
+            </form>
           </tab>
           <tab heading="Edit Photos">
             <app-photo-edditor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-edditor>
