--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -5,9 +5,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/members']" >Matches</a>
       </li>
-      <li class="nav-item" routerLinkActive="active" >
+      <!-- <li class="nav-item" routerLinkActive="active" >
         <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
-      </li>
+      </li> -->
       <li class="nav-item" routerLinkActive="active" >
         <a class="nav-link" [routerLink]="['/messages']">Messages</a>
       </li>
@@ -22,9 +22,9 @@
       </a>
     
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user"></i>Edit Profile</a>
+        <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user mr-1"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item"  (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item"  (click)="logout()"><i class="fa fa-sign-out mr-1"></i>Logout</a>
       </div>
     </div>
   
