--- a/DatingApp-SPA/src/app/members/member-messages/member-messages.component.css
+++ b/DatingApp-SPA/src/app/members/member-messages/member-messages.component.css
@@ -23,3 +23,16 @@
     overflow-y: scroll;
     height: 400px;
 }
+
+.receive-message{
+    background:rgb(239 239 239);
+    border-radius: 2px 15px 15px 15px;
+    padding: 15px;
+    background-size: 300px 100px;
+}
+
+.send-message{
+    background:rgb(213 238 255);
+    border-radius: 15px 2px 15px 15px;
+    padding: 15px;
+}
