--- a/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
+++ b/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
@@ -5,35 +5,22 @@
     </div>
     <ul class="chat">
       <li *ngFor="let message of messages">
-        <div *ngIf="message.senderId == recipientId">
-          <span class="chat-img float-right">
-            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
-          </span>
-          <div class="chat-body">
-            <div class="chat-header">
-              <strong class="primary-font">{{message.senderKnownAs}}</strong>
-              <small class="text-muted float-right">
-                <span class="fa fa-clock-o">{{message.messageSent}}</span>
-              </small>
+        
+        <div *ngIf="message.senderId != recipientId">
+          <div class="chat-body text-right">
+            <span style="font-size: 12px;">{{message.messageSent|date:'shortTime'}}</span>
+            <div class="send-message">
+              <p>{{message.content}}</p>
             </div>
-            <p>{{message.content}}</p>
           </div>
         </div>
-        <!-- to me-->
-        <div *ngIf="message.senderId != recipientId">
+
+        <div *ngIf="message.senderId == recipientId">
           <span class="chat-img float-left">
-            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
+            <img src="{{message.recipientPhotoUrl}}" alt="{{message.recipientKnownAs}}" class="rounded-circle">
           </span>
-          <div class="chat-body">
-            <div class="chat-header">
-              <small class="text-muted float-right">
-                <span class="fa fa-clock-o">{{message.messageSent}}</span>
-                <span *ngIf="!message.isRead" class="text-muted">(unread)</span>
-                <span *ngIf="message.isRead" class="text-success">(Read {{message.dateRead}})</span>
-              </small>
-              <strong class="primary-font">{{message.senderKnownAs}}</strong>
-             
-            </div>
+          <span style="font-size: 12px;">{{message.recipientKnownAs}},{{message.messageSent | date:'shortTime'}}</span>
+          <div class="receive-message">
             <p>{{message.content}}</p>
           </div>
         </div>
@@ -46,9 +33,9 @@
       <div class="input-group">
         <input type="text" ngDefaultControl
         [(ngModel)]="newMessage.content" name="content" required
-        class="form-control input-sm" placeholder="send a private message">
+        class="form-control input-sm" placeholder="Type message...">
         <div class="input-group-append">
-          <button class="btn btn-primary" [disabled]="!messageForm.valid">Send</button>
+          <button class="btn btn-primary" [disabled]="!messageForm.valid"><i class="fa fa-send"></i></button>
         </div>
       </div>
     </form>
